2.1.3 (21.06.2018):

* Only run test if session file can be deserialised. Closes bug #293 (again)
  (t/175_open_session2.t fails on i686: Long integer size is not compatible)
* Optionally also include timezone and time information in metadata of PDF or
  DjVU. Closes feature request #102 (always sets the time to 0 UTC)


2.1.2 (23.05.2018):

* Fix bug causing config JSON file to be saved with numeric locale, and
  therefore potentially corrupt.


2.1.1 (14.05.2018):

* Fix saving profile bug caused by deprecated Gtk2 API
* + support for dragging files from file managers (again)
* Update to Spanish translation (thanks to Rodrigo)
* Update to Swedish translation (thanks to Anders Jonsson)


2.1.0 (20.04.2018):

* Support import of password-protected PDFs. Closes Debian bug #894764
  (Please prompt for password on import of encrypted file)
* Update cursor depending on edge of selection, and allow selection to be
  modified by dragging the edge or corner
* Update to Ukranian translation (thanks to Yuri Chornoivan)


2.0.3 (30.03.2018):

* Always update image viewer if page selection changes
  Closes Debian bug #893026 (Preview pane does not update)
* Fixed manually typing date in metadata dialog (again)
  Closes Debian bug #893024 (Manual entry into UI date widget is broken)
* If image is zoomed to fit viewer, update zoom when the size of the viewer
  changes
* Update cursor depending on selected tool and position
* Build corrupt session file by hand rather than storing binary file that is
  not universally compatible. Closes bug #293
  (t/175_open_session2.t fails on i686: Long integer size is not compatible)
* Convert all scans to PNG to allow tesseract to extract resolution
* Ignore invalid options in profile
* Ignore options in profile that are already within tolerance. Closes #294
  (Hangs on "Setting Option Source" When Changing Between Feeder and Flatbed)
* Update to Hungarian translation (thanks to csola)


2.0.2 (26.03.2018):

* Clear view if no page selected